# harnessai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ERD.md  LICENSE  PLAN.md  README.ko.md  README.md  SECURITY.md  SETUP.md  TODOS.md  WORKFLOW.md  docker-compose.yml  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
backend/: .env.example  Dockerfile  agents.yaml  alembic.ini  pyproject.toml
backend/agents/architect/: CLAUDE.md
backend/agents/backend_coder/: CLAUDE.md
backend/agents/designer/: CLAUDE.md
backend/agents/frontend_coder/: CLAUDE.md
backend/agents/orchestrator/: CLAUDE.md
backend/agents/qa/: CLAUDE.md
backend/agents/reviewer/: CLAUDE.md
backend/alembic/: env.py
backend/alembic/versions/: 24455041369e_datetime_timezone_true.py  34b15a242035_initial.py  6655f15fca33_add_plans_table.py  a1b2c3d4e5f6_add_epic_id_to_plans.py
backend/docs/: conventions.md  shared-lessons.md  skeleton.md  skeleton_template.md
backend/src/: bootstrap.py  main.py
backend/src/core/: config.py  errors.py  types.py
backend/src/dashboard/: auth.py  event_mapper.py  server.py  websocket_manager.py
backend/src/orchestrator/: __init__.py  config.py  context.py  logger.py  orchestrate.py  output_parser.py  phase.py  pipeline.py  pipeline_runner.py  runner.py  security_hooks.py  skeleton_assembler.py  state.py
backend/tests/agents/: test_director_agent.py  test_director_plan.py  test_git_agent.py
docs/: ARCHITECTURE.md  (+2 more)
(+111 files in other folders)
